<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progressBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingTop="8dp"
    android:paddingRight="8dp"
    tools:context=".Assessment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/almost_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/arial_mt_rounded"
                android:text="Almost"
                android:textColor="@color/heading"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/there_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/arial_mt_rounded"
                android:text="there!"
                android:layout_below="@id/almost_txt"
                android:textColor="@color/heading"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/almost_txt" />

            <TextView
                android:id="@+id/subheading_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/there_txt"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/arial_nova_light"
                android:text="@string/assess_page"
                android:textColor="@color/subtitle"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/there_txt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@id/subheading_txt"
                android:layout_marginTop="70dp"
                android:paddingBottom="38dp"
                android:background="@drawable/box_bg"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/box"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <RelativeLayout
                    android:id="@+id/con1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="27dp"
                    android:paddingRight="27dp">

                    <TextView
                        android:id="@+id/questionView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/arial_mt_rounded"
                        android:text="@string/first_ques"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/questionView"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="27dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/questionView">

                        <RadioGroup
                            android:id="@+id/buttonholder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp">

                            <RadioButton
                                android:id="@+id/radioButton1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/arial_nova_light"
                                android:paddingStart="10dp"
                                android:text="@string/first_choice"
                                android:textAlignment="viewStart"
                                android:textColor="@color/heading"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButton2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:fontFamily="@font/arial_nova_light"
                                android:paddingStart="10dp"
                                android:text="@string/second_choice"
                                android:textAlignment="viewStart"
                                android:textColor="@color/heading"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButton3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:fontFamily="@font/arial_nova_light"
                                android:paddingStart="10dp"
                                android:text="@string/third_choice"
                                android:textAlignment="viewStart"
                                android:textColor="@color/heading"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButton4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:fontFamily="@font/arial_nova_light"
                                android:paddingStart="10dp"
                                android:text="@string/fourth_choice"
                                android:textAlignment="viewStart"
                                android:textColor="@color/heading"
                                android:textSize="18sp" />

                            <RadioButton
                                android:id="@+id/radioButton5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="7dp"
                                android:fontFamily="@font/arial_nova_light"
                                android:paddingStart="10dp"
                                android:text="@string/fifth_choice"
                                android:textAlignment="viewStart"
                                android:textColor="@color/heading"
                                android:textSize="18sp" />

                        </RadioGroup>

                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/con1"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp">

                    <Button
                        android:id="@+id/button_next"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button"
                        android:fontFamily="@font/arial_mt_rounded"
                        android:text="@string/next_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/heading"
                        android:textSize="20sp"
                        app:backgroundTint="@color/buttons"
                        android:layout_alignParentBottom="true"
                        />

                </RelativeLayout>
            </RelativeLayout>
            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="116dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>